# o7tv

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: opencode-dispatch.yml  opencode-docs.yaml  opencode.yml
docs/: CHANGELOG.md  api.md  configuration.md  conversion.md  errors.md
src/: __init__.py
src/app/: main.py
src/app/api/v1/: emotes.py
src/app/core/: __init__.py  config.py
src/app/services/: conversion.py  seventv.py
src/app/utils/: http.py
src/o7tv/: main.py
src/o7tv/api/: emotes.py
src/o7tv/api/v1/: emotes.py
src/o7tv/config/: config.py
src/o7tv/exceptions/: __init__.py  ffmpeg_exceptions.py
src/o7tv/models/: __init__.py  emotes.py
src/o7tv/services/: conversion.py  seventv.py
src/o7tv/utils/: files.py  http.py
src/static/: 01F5VW2TKR0003RCV2Z6JBHCST.webm  01F6MQ33FG000FFJ97ZB8MWV52.webm  01F6MZGCNG000255K4X1K7NTHR.webm  01FZ5KJ818000B4AWRZNMVN880.webm  01J8HGTNYG000DNWJ3ST67HNWM.webm  01KFTHBW2DMWAGEKVJH5VKV30G.webm
src/templates/: index.html
templates/: base.html  convert.html  home.html  index.html  results.html
