[build-system]
requires = ["uv_build >= 0.10.0, <0.11.0"]
build-backend = "uv_build"

[project]
name = "o7tv"
version = "0.1.0"
description = "Convert 7TV emotes to WebM files with a modern web interface"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["7tv", "emotes", "webm", "ffmpeg", "converter"]
authors = [{ name = "pedrety"}]
maintainers = [{ name = "pedrety"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.40.0",
    "ffmpeg-python>=0.2.0",
    "pydantic-settings>=2.12.0",
]

[project.urls]
Repository = "https://github.com/pedrety/o7tv"
Issues = "https://github.com/pedrety/o7tv/issues"
Documentation = "https://github.com/pedrety/o7tv/blob/main/README.md"
Changelog = "https://github.com/pedrety/o7tv/releases"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=4.5.1",
    "pyupgrade>=3.21.2",
    "types-requests>=2.32.0",
]


[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    ".vscode",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "tests",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "D",
]
ignore = [
    "D100",
    "D101",
    "D104",
    "D106",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = true
known-first-party = ["o7tv"]


[tool.ruff.format]
indent-style = "space"
quote-style = "double"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = ["ffmpeg"]
ignore_missing_imports = true
